src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Advisor_Certifications__c</fullName>
        <description>Used to capture a Retail Advisor&apos;s Certifications</description>
        <label>Advisor Certifications</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisor_Trainings__c</fullName>
        <description>Used to catpure a Retail Advisor&apos;s  completed trainings</description>
        <label>Advisor Trainings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <description>A Contact&apos;s Assistant&apos;s Email</description>
        <encrypted>true</encrypted>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Assistant_Name__c</fullName>
        <description>A Contact&apos;s Assistant&apos;s Name</description>
        <encrypted>true</encrypted>
        <label>Assistant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistant_Phone__c</fullName>
        <description>A Contact&apos;s Assistant&apos;s Phone</description>
        <encrypted>true</encrypted>
        <label>Assistant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Bounce_Count__c</fullName>
        <description>For Silverpop. This is the number of bounces for this contact across all emails for all campaigns.</description>
        <label>Bounce Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Title__c</fullName>
        <description>Used to capture a contact&apos;s Title, eg. VP of XX</description>
        <label>Business Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CONTID__c</fullName>
        <description>MMD Identifier</description>
        <label>Contact MMD ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRD__c</fullName>
        <description>Registered Rep CRD Number</description>
        <label>CRD #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultant_Market_Focus_1__c</fullName>
        <description>Used to capture the number of years a consutlant has been in business</description>
        <label>Consultant Research Focus</label>
        <picklist>
            <picklistValues>
                <fullName>Area 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area 4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Years_in_Business__c</fullName>
        <formula>(TODAY() - In_Business_Since__c)/365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consultant Years in Business</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Influence__c</fullName>
        <label>Contact Influence</label>
        <picklist>
            <picklistValues>
                <fullName>Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gate Keeper</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Marketing_Language__c</fullName>
        <description>Used to capture the language that the Contact wants to recieve marketing mailings in</description>
        <label>Contact Marketing Language</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Name1__c</fullName>
        <description>Used for Apex Concatenation</description>
        <encrypted>true</encrypted>
        <label>Contact Name</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Used for Apex Concatenation</description>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_for_Attendee_Search__c</fullName>
        <label>Contact Name for Attendee Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Reporting_Language__c</fullName>
        <description>Used to capture the language that the Contact wants to recieve reprots in</description>
        <label>Contact Reporting Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English-UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French-Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <description>Reference data field to track contact Role</description>
        <label>Contact Role</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Actuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AML Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auditor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authorized Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficial Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Member/Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Service Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Advisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lending Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manager</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Suffix__c</fullName>
        <description>Reference data field to track suffix, instead of the standard suffix field</description>
        <label>Contact Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.P.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cfp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Tier__c</fullName>
        <description>Reference data field to track a contact&apos;s tier (plat, gold, silver bronze, unassigned)</description>
        <label>Contact Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unassigned</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Reference data field to track a contact type, related to Organization Type</description>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client/Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Website__c</fullName>
        <description>Tracks a contact&apos;s website, e.g. Advisor website</description>
        <encrypted>true</encrypted>
        <label>Contact Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DCIO_BUSINESS_PLAN__c</fullName>
        <label>DCIO_BUSINESS_PLAN</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Joined_Current_Firm__c</fullName>
        <label>Date Joined Current Firm</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Level_Code__c</fullName>
        <description>Used for MDM integration</description>
        <label>Distribution Level Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Level__c</fullName>
        <description>Used for TM to assign Territory</description>
        <label>Distribution Level</label>
        <picklist>
            <picklistValues>
                <fullName>Global Institutional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-US Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Retail</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Distribution_Level_fm__c</fullName>
        <formula>(IF(
(INCLUDES( Account.Distribution_Level__c,&quot;Global Institutional&quot;))
&amp;&amp;
(NOT(INCLUDES( Account.Distribution_Level__c,&quot;US Retail&quot;))) 
&amp;&amp;
(NOT( (INCLUDES(Account.Distribution_Level__c,&quot;Non-US Retail&quot;)))), &quot;1&quot;,&quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribution Level fm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edward_Jones_ID__c</fullName>
        <description>Field used to Capture the ID for Edward Jones coverage.</description>
        <label>Edward Jones ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edward_Jones_Territory__c</fullName>
        <description>Field used to capture Edward Jones specific territory (assigned by Edward Jones).</description>
        <label>Edward Jones Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>This will capture the employee effective date from Workday</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <description>This field will contain data from Concur regarding the  contact&apos;s YTD expenses</description>
        <label>Expenses to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <description>Used to track Consultant expertise</description>
        <label>Expertise</label>
        <picklist>
            <picklistValues>
                <fullName>Sample 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample 5</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Extent_of_Use_of_Recc_List__c</fullName>
        <description>Tracks how much an advisor leverages recommneded list</description>
        <label>Extent of Use of Recc List</label>
        <picklist>
            <controllingField>Use_of_Recommendation__c</controllingField>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Frequency_of_Fund_Lineup_Review__c</fullName>
        <description>Tracks how often an advisor does a fund lineup to help wholesalers plan conversations with advisors</description>
        <label>Frequency of Fund Lineup Review</label>
        <picklist>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geo_Location__c</fullName>
        <description>Used for Timezone feature.</description>
        <label>Geo Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Google_Maps__c</fullName>
        <description>Used for Google Maps icon to drive auto address location</description>
        <formula>HYPERLINK(&quot;http://maps.google.com/?q=&quot;&amp;SUBSTITUTE(Street_Street__c,SUBSTITUTE($Label.Linebreak,&quot;-&quot;,&quot;&quot;),&quot; &quot;) &amp; &quot;+&quot; &amp; Street_City__c &amp; &quot;+&quot; &amp; Street_State_Province__c &amp; &quot;+&quot; &amp;  Street_Zip_Postal_Code__c  , IMAGE(&quot;/resource/GoogleMapsIcon&quot;, &quot;&quot;, 45, 45))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Maps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hard_Bounce__c</fullName>
        <description>For Silverpop. This is the number of hard bounces for this contact across all emails for all campaigns.</description>
        <label>Hard Bounce</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Highlights__c</fullName>
        <description>Text field for advisors to capture additional information about a contact</description>
        <label>Highlights</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes a contact as a home office contact</description>
        <inlineHelpText>This field will indicate whether the associated address is a home office.</inlineHelpText>
        <label>Home Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Business_Since__c</fullName>
        <description>Used to track when</description>
        <label>In Business Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internet_set_up_for_your_account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet set up for your account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Japan_Contact_ID__c</fullName>
        <label>Japan Contact ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_CSM_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes Key CSM Contact</description>
        <label>Key CSM Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_RM_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes Key RM Contact</description>
        <inlineHelpText>Select if this a Key RM Contact for this Organization</inlineHelpText>
        <label>Key RM Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Sales_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if this is a Key Sales Contact for this Organization</inlineHelpText>
        <label>Key Sales Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Scheduling_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will display whether or not this contact is a key person to contact when scheduling meetings.</description>
        <inlineHelpText>This field will display whether or not this contact is a key person to contact when scheduling meetings.</inlineHelpText>
        <label>Key Scheduling Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_MMD_Data_Load__c</fullName>
        <description>Last load of MMD data</description>
        <label>Last MMD Data Load</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn__c</fullName>
        <description>Tracks a Contact&apos;s linked URL. Automatically updated if blank based on MMD LinkedIn field</description>
        <encrypted>true</encrypted>
        <label>LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <description>MDM ID</description>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMD_ADDRESS__c</fullName>
        <description>MMD Field</description>
        <label>MMD Alt Address</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Alt_State_Prov__c</fullName>
        <description>MMD Field</description>
        <formula>CASE( MMD_STATE__c ,
&quot;AB&quot;,&quot;Alberta&quot;,
&quot;AK&quot;,&quot;Alaska&quot;,
&quot;AL&quot;,&quot;Alabama&quot;,
&quot;ALB&quot;,&quot;Alberta&quot;,
&quot;AR&quot;,&quot;Arkansas&quot;,
&quot;AZ&quot;,&quot;Arizona&quot;,
&quot;BC&quot;,&quot;British Columbia&quot;,
&quot;CA&quot;,&quot;California&quot;,
&quot;CO&quot;,&quot;Colorado&quot;,
&quot;CT&quot;,&quot;Connecticut&quot;,
&quot;DC&quot;,&quot;District of Columbia&quot;,
&quot;DE&quot;,&quot;Delaware&quot;,
&quot;FL&quot;,&quot;Florida&quot;,
&quot;GA&quot;,&quot;Georgia&quot;,
&quot;GU&quot;,&quot;Guam&quot;,
&quot;HI&quot;,&quot;Hawaii&quot;,
&quot;IA&quot;,&quot;Iowa&quot;,
&quot;ID&quot;,&quot;Idaho&quot;,
&quot;IL&quot;,&quot;Illinois&quot;,
&quot;IN&quot;,&quot;Indiana&quot;,
&quot;KS&quot;,&quot;Kansas&quot;,
&quot;KY&quot;,&quot;Kentucky&quot;,
&quot;LA&quot;,&quot;Louisiana&quot;,
&quot;MA&quot;,&quot;Massachusetts&quot;,
&quot;MB&quot;,&quot;Manitoba&quot;,
&quot;MD&quot;,&quot;Maryland&quot;,
&quot;ME&quot;,&quot;Maine&quot;,
&quot;MI&quot;,&quot;Michigan&quot;,
&quot;MN&quot;,&quot;Minnesota&quot;,
&quot;MO&quot;,&quot;Missouri&quot;,
&quot;MS&quot;,&quot;Mississippi&quot;,
&quot;MT&quot;,&quot;Montana&quot;,
&quot;NB&quot;,&quot;New Brunswick&quot;,
&quot;NC&quot;,&quot;North Carolina&quot;,
&quot;ND&quot;,&quot;North Dakota&quot;,
&quot;NE&quot;,&quot;Nebraska&quot;,
&quot;NH&quot;,&quot;New Hampshire&quot;,
&quot;NJ&quot;,&quot;New Jersey&quot;,
&quot;NL&quot;,&quot;Newfoundland and Labrador&quot;,
&quot;NM&quot;,&quot;New Mexico&quot;,
&quot;NS&quot;,&quot;Nova Scotia&quot;,
&quot;NT&quot;,&quot;Northwest Territories&quot;,
&quot;NU&quot;,&quot;Nanavut&quot;,
&quot;NV&quot;,&quot;Nevada&quot;,
&quot;NY&quot;,&quot;New York&quot;,
&quot;OH&quot;,&quot;Ohio&quot;,
&quot;OK&quot;,&quot;Oklahoma&quot;,
&quot;ON&quot;,&quot;Ontario&quot;,
&quot;ONT&quot;,&quot;Ontario&quot;,
&quot;OR&quot;,&quot;Oregon&quot;,
&quot;PA&quot;,&quot;Pennsylvania&quot;,
&quot;PE&quot;,&quot;Prince Edward Island&quot;,
&quot;PR&quot;,&quot;Puerto Rico&quot;,
&quot;QC&quot;,&quot;Quebec&quot;,
&quot;QE&quot;,&quot;Quebec&quot;,
&quot;RI&quot;,&quot;Rhode Island&quot;,
&quot;SA&quot;,&quot;Saskatchewan&quot;,
&quot;SC&quot;,&quot;South Carolina&quot;,
&quot;SD&quot;,&quot;South Dakota&quot;,
&quot;SK&quot;,&quot;Saskatchewan&quot;,
&quot;TN&quot;,&quot;Tennessee&quot;,
&quot;TX&quot;,&quot;Texas&quot;,
&quot;UT&quot;,&quot;Utah&quot;,
&quot;VA&quot;,&quot;Virginia&quot;,
&quot;VI&quot;,&quot;US Virgin Islands&quot;,
&quot;VT&quot;,&quot;Vermont&quot;,
&quot;WA&quot;,&quot;Washington&quot;,
&quot;WI&quot;,&quot;Wisconsin&quot;,
&quot;WV&quot;,&quot;West Virginia&quot;,
&quot;WY&quot;,&quot;Wyoming&quot;,
&quot;YT&quot;,&quot;Yukon Territories&quot;, MMD_STATE__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMD Alt State/Prov</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_CITY__c</fullName>
        <description>MMD Field</description>
        <label>MMD Alt City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_COMPANY__c</fullName>
        <description>MMD Field</description>
        <label>MMD Alt Company Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_COUNTRY__c</fullName>
        <description>MMD Field</description>
        <label>MMD Alt Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_EMAIL__c</fullName>
        <description>MMD Field</description>
        <label>MMD Email</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_FNAME__c</fullName>
        <description>MMD Field</description>
        <label>MMD First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_ID__c</fullName>
        <description>MMD Field</description>
        <externalId>true</externalId>
        <label>MMD_ID</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMD_Info_Chg_By__c</fullName>
        <description>MMD Field</description>
        <label>MMD Info Chg By</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Info_Chg__c</fullName>
        <description>MMD Field</description>
        <label>MMD Info Chg</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMD_JOB_TITLE__c</fullName>
        <description>MMD Field</description>
        <label>MMD Job Title</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Job_10__c</fullName>
        <description>MMD Field</description>
        <label>MMD Job 10</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Job_1__c</fullName>
        <label>MMD Job 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Job_2__c</fullName>
        <description>MMD Field</description>
        <label>MMD Job 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_LINKEDIN__c</fullName>
        <description>MMD Field</description>
        <label>MMD LinkedIn</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMD_LNAME__c</fullName>
        <description>MMD Field</description>
        <label>MMD Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_MNAME__c</fullName>
        <description>MMD Field</description>
        <label>MMD Middle Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_PERSONTITLE__c</fullName>
        <description>MMD Field</description>
        <label>MMD Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_PHONE__c</fullName>
        <description>MMD Field</description>
        <label>MMD Alt Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_SEX__c</fullName>
        <description>MMD Field</description>
        <label>MMD Gender</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_STATE__c</fullName>
        <description>MMD Field</description>
        <label>MMD Alt State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_SUFFIX__c</fullName>
        <description>MMD Field</description>
        <label>MMD Suffix</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_WebAccess_Link__c</fullName>
        <description>MMD Field</description>
        <formula>HYPERLINK(&quot;http://products.mmdwebaccess.com/member/CompGenInfo.aspx?ids=&quot; &amp; CONTID__c ,&apos;Click Here&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMD WebAccess Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_ZIP__c</fullName>
        <description>MMD Field</description>
        <label>MMD Alt Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Attention__c</fullName>
        <description>Mailing Field</description>
        <encrypted>true</encrypted>
        <label>Mailing Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Superfluous__c</fullName>
        <description>Mailing Field</description>
        <label>Mailing Superfluous</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Preferences__c</fullName>
        <description>Used to track Marketing Tags</description>
        <label>Marketing Preferences</label>
        <picklist>
            <picklistValues>
                <fullName>Client Satisfaction Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance/ADV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holiday Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Conferences/Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Corporate Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK FCP Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsubscribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Satisfaction Survey1</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
</CustomObject>